--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -26,6 +26,7 @@
     height:50px;
     display: block;
     border-radius:50%;
+    border: 2.5px solid white;
     text-align: center;
     line-height: 50px;
     position: fixed;
@@ -33,4 +34,8 @@
     bottom: 100px;
     background-color: $color-2;
     color:$color-1;
+    transition:.3s all;
+    &:hover{
+        transform: scale(1.05);
+    }
 }
