--- a/css/_header.scss
+++ b/css/_header.scss
@@ -6,13 +6,14 @@
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Lato', sans-serif;
 // variables
-// $color-1:#A5D6E4;
+
 $color-1:white;
-// $color-2:#210A72;
 $color-2:#05001a;
 $color-3:#57F1B1;
 $color-4:#E68244;
 $max-width:1000px;
+
+
 // placehorder
 
 %no-margin{
@@ -36,9 +37,10 @@ body{
     z-index: 100;
     width: 100%;
     margin: auto;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
     
     .header{
-        max-width: $max-width;
+        max-width: 100%;
         display:flex;
         background-color: $color-1;
         justify-content: space-between;
