--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f3f3f3;
+  font-family: "Kumbh Sans", sans-serif;
 }
 
 .parent-header {
@@ -18,9 +19,10 @@ body {
   z-index: 100;
   width: 100%;
   margin: auto;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 .parent-header .header {
-  max-width: 1000px;
+  max-width: 100%;
   display: flex;
   background-color: white;
   justify-content: space-between;
@@ -78,6 +80,9 @@ body {
 .home .home__text {
   padding: 50px;
   color: white;
+  opacity: 0;
+  transform: scale(0.1);
+  transition: 2s all ease;
   font-family: "Kumbh Sans", sans-serif;
 }
 .home .home__text h4 {
@@ -107,12 +112,16 @@ body {
 .parent_whatWeHave {
   width: 100%;
   background-color: #05001a;
+  overflow: hidden;
 }
 .parent_whatWeHave .whatWeHave {
   display: flex;
   justify-content: center;
   max-width: 1000px;
   margin: auto;
+  opacity: 0;
+  transform: translateY(200px);
+  transition: 0.8s all;
 }
 .parent_whatWeHave .whatWeHave__option {
   padding: 10px;
@@ -243,6 +252,7 @@ body {
 .parent-whatWeDo {
   width: 100%;
   font-family: "Kumbh Sans", sans-serif;
+  overflow: hidden;
 }
 .parent-whatWeDo > h4 {
   font-size: 4rem;
@@ -255,6 +265,9 @@ body {
   max-width: 1000px;
   justify-content: space-between;
   margin: auto;
+  opacity: 0;
+  transform: translateX(-900px);
+  transition: 1s all;
 }
 .parent-whatWeDo .whatWeDo__item {
   padding: 40px;
