--- a/css/style_bloc.css
+++ b/css/style_bloc.css
@@ -97,50 +97,15 @@ body {
   color: white;
 }
 
-.about {
-  max-width: 1000px;
-  margin: 150px auto;
-  display: flex;
+.parent-blog {
+  margin-top: 110px;
 }
-.about__item > img {
-  max-width: 450px;
-}
-.about__item h4 {
-  font-size: 4rem;
-  margin: 0;
-}
-.about__item p {
-  font-weight: 500;
-}
-
-.historique {
+.parent-blog .blog {
   max-width: 1000px;
   margin: auto;
 }
-.historique h4 {
-  font-size: 4rem;
-}
-.historique p {
-  font-weight: 500;
+.parent-blog .blog__item {
+  padding: 10px;
 }
 
-.parent-partener {
-  max-width: 1000px;
-  margin: auto;
-}
-.parent-partener h4 {
-  font-size: 4rem;
-}
-.parent-partener .partener {
-  display: flex;
-  justify-content: space-between;
-}
-.parent-partener .partener__item {
-  width: 200px;
-  height: 200px;
-  background-image: url("/img/826909-hospital-wallpapers-1920x1080-hd.jpg");
-  background-position: center center;
-  background-size: cover;
-}
-
-/*# sourceMappingURL=style_about.css.map */
+/*# sourceMappingURL=style_bloc.css.map */
