--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,7 @@ body {
 }
 .parent-whatWeDo > h4 {
   font-size: 4rem;
+  margin: 35px 0px;
   color: #05001a;
   text-align: center;
 }
@@ -266,7 +267,7 @@ body {
   justify-content: space-between;
   margin: auto;
   opacity: 0;
-  transform: translateX(-900px);
+  transform: translateY(900px);
   transition: 1s all;
 }
 .parent-whatWeDo .whatWeDo__item {
