--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,4 +1,3 @@
-
 .parent-footer{
     width:100%;
     background-color: $color-2;
@@ -11,11 +10,12 @@
         margin:auto;
         justify-content:space-between;
 
+        @include device-max-700{
+            flex-direction: column;
+        }
 
         &__item{
             text-align: center;
-            // padding-padding: 90px;
-            // font-size: 3rem;
             color: $color-1;
         }
     }
@@ -26,16 +26,12 @@
     height:50px;
     display: block;
     border-radius:50%;
-    border: 2.5px solid white;
     text-align: center;
     line-height: 50px;
     position: fixed;
     right:20px;
     bottom: 100px;
+    border: 2.5px solid white;
     background-color: $color-2;
     color:$color-1;
-    transition:.3s all;
-    &:hover{
-        transform: scale(1.05);
-    }
 }
