--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,18 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&family=Manrope&family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
-
-// font-family: 'Kumbh Sans', sans-serif;
-// font-family: 'Manrope', sans-serif;
-// font-family: 'Roboto', sans-serif;
-// font-family: 'Lato', sans-serif;
-// variables
-
-$color-1:white;
-$color-2:#05001a;
-$color-3:#57F1B1;
-$color-4:#E68244;
-$max-width:1000px;
-
 
 // placehorder
 
@@ -23,6 +8,7 @@ $max-width:1000px;
 
 
 // header style
+
 body{
     margin:0;
     padding:0;
@@ -46,6 +32,19 @@ body{
         justify-content: space-between;
         align-items: center;
         margin: auto;
+        
+
+        .fa-bars{
+            font-size: 30px;
+            cursor: pointer;
+            position: absolute;
+            top:12px;
+            right:20px;
+            visibility: hidden;
+            @include device-max-900{
+                visibility:visible;
+            }
+        }
 
         img{
             height:50px
@@ -54,6 +53,24 @@ body{
         &__menu{
             display:flex;
             padding:20px;
+            transition: .7s all;
+            box-sizing: border-box;
+            position: relative;
+
+            .fa-times{
+                position:absolute;
+                cursor: pointer;
+                top:20px;
+                left: 30px;
+                font-size: 30px;
+                visibility:hidden;
+                display:none;
+                @include device-max-900{
+                    visibility:visible;
+                    display: inline-block;
+                }
+            }
+
             a{
                 display:block;
                 text-decoration: none;
@@ -63,9 +80,25 @@ body{
                 font-weight: 900;
                 border-bottom: 4px solid transparent;
                 transition: .9s all;
+                box-sizing: border-box;
+                @include device-max-900{
+                    width:fit-content;
+                    margin:0;
+                }
+
                 &:hover{
                     border-bottom: 4px solid $color-2;
                 }
+            }
+            @include device-max-900{
+                position: absolute;
+                padding-left: 20px;
+                width:100%;
+                flex-direction: column;
+                top: -1000px;
+                left:0;
+                background-color:white;
+
             }
         }
 
@@ -73,7 +106,10 @@ body{
             display:flex;
             font-family: 'Kumbh Sans', sans-serif;
             text-transform: uppercase;
-
+            
+            @include device-max-900{
+                display:none;
+            }
             h4{
                 
                 color:$color-2;
@@ -91,3 +127,7 @@ body{
     }
 }
 
+
+*{
+    box-sizing: border-box;
+}
