--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,43 @@ body {
   align-items: center;
   margin: auto;
 }
+.parent-header .header .fa-bars {
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  top: 12px;
+  right: 20px;
+  visibility: hidden;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header .fa-bars {
+    visibility: visible;
+  }
+}
 .parent-header .header img {
   height: 50px;
 }
 .parent-header .header__menu {
   display: flex;
   padding: 20px;
+  transition: 0.7s all;
+  box-sizing: border-box;
+  position: relative;
+}
+.parent-header .header__menu .fa-times {
+  position: absolute;
+  cursor: pointer;
+  top: 20px;
+  left: 30px;
+  font-size: 30px;
+  visibility: hidden;
+  display: none;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header__menu .fa-times {
+    visibility: visible;
+    display: inline-block;
+  }
 }
 .parent-header .header__menu a {
   display: block;
@@ -45,14 +76,37 @@ body {
   font-weight: 900;
   border-bottom: 4px solid transparent;
   transition: 0.9s all;
+  box-sizing: border-box;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header__menu a {
+    width: fit-content;
+    margin: 0;
+  }
 }
 .parent-header .header__menu a:hover {
   border-bottom: 4px solid #05001a;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header__menu {
+    position: absolute;
+    padding-left: 20px;
+    width: 100%;
+    flex-direction: column;
+    top: -1000px;
+    left: 0;
+    background-color: white;
+  }
 }
 .parent-header .header .header__contact {
   display: flex;
   font-family: "Kumbh Sans", sans-serif;
   text-transform: uppercase;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header .header__contact {
+    display: none;
+  }
 }
 .parent-header .header .header__contact h4 {
   color: #05001a;
@@ -66,6 +120,47 @@ body {
   padding: 20px 10px;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+.parent-footer {
+  width: 100%;
+  background-color: #05001a;
+  margin-top: 50px;
+}
+.parent-footer .footer {
+  max-width: 1000px;
+  min-height: 300px;
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+}
+@media screen and (max-width: 700px) {
+  .parent-footer .footer {
+    flex-direction: column;
+  }
+}
+.parent-footer .footer__item {
+  text-align: center;
+  color: white;
+}
+
+.btn-goUp {
+  width: 50px;
+  height: 50px;
+  display: block;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 50px;
+  position: fixed;
+  right: 20px;
+  bottom: 100px;
+  border: 2.5px solid white;
+  background-color: #05001a;
+  color: white;
+}
+
 .home {
   background-image: url("/img/826909-hospital-wallpapers-1920x1080-hd.jpg");
   background-position: center center;
@@ -76,6 +171,12 @@ body {
   align-items: center;
   min-height: 70vh;
   margin-top: 80px;
+}
+@media screen and (max-width: 900px) {
+  .home {
+    margin-top: 30px;
+    min-height: 50vh;
+  }
 }
 .home .home__text {
   padding: 50px;
@@ -88,6 +189,12 @@ body {
 .home .home__text h4 {
   font-size: 5rem;
 }
+@media screen and (max-width: 700px) {
+  .home .home__text h4 {
+    font-size: 3rem;
+    text-align: center;
+  }
+}
 .home .home__text .home__links {
   display: flex;
   justify-content: center;
@@ -96,7 +203,7 @@ body {
   text-decoration: none;
   padding: 15px 35px;
   background: white;
-  margin: 10px 30px;
+  margin: auto;
   border: 2px solid transparent;
   color: #05001a;
   font-family: "Kumbh Sans", sans-serif;
@@ -107,6 +214,12 @@ body {
   border: 2px solid white;
   color: white;
   background-color: #05001a;
+}
+@media screen and (max-width: 700px) {
+  .home .home__text .home__link {
+    padding: 5px 10px;
+    font-size: 0.8rem;
+  }
 }
 
 .parent_whatWeHave {
@@ -123,13 +236,24 @@ body {
   transform: translateY(200px);
   transition: 0.8s all;
 }
+@media screen and (max-width: 900px) {
+  .parent_whatWeHave .whatWeHave {
+    flex-direction: column;
+  }
+}
 .parent_whatWeHave .whatWeHave__option {
   padding: 10px;
+  width: fit-content;
   display: flex;
   background-color: #05001a;
   color: white;
   align-items: center;
   font-family: "Kumbh Sans", sans-serif;
+}
+@media screen and (max-width: 900px) {
+  .parent_whatWeHave .whatWeHave__option {
+    width: 100%;
+  }
 }
 .parent_whatWeHave .whatWeHave__option .fas {
   font-size: 80px;
@@ -159,11 +283,21 @@ body {
   background-size: cover;
   width: 40%;
 }
+@media screen and (max-width: 900px) {
+  .parent-form .form__image {
+    display: none;
+  }
+}
 .parent-form .form__block {
   flex: 1;
   font-family: "Kumbh Sans", sans-serif;
   font-weight: 900;
   background-color: white;
+}
+@media screen and (max-width: 900px) {
+  .parent-form .form__block {
+    width: 100%;
+  }
 }
 .parent-form .form__block h4 {
   color: white;
@@ -174,10 +308,16 @@ body {
 }
 .parent-form .form__block form {
   padding: 0px 30px;
+  box-sizing: border-box;
 }
 .parent-form .form__block form div {
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 900px) {
+  .parent-form .form__block form div {
+    flex-direction: column;
+  }
 }
 .parent-form .form__block form input[type=text], .parent-form .form__block form textarea {
   padding: 15px 10px;
@@ -194,8 +334,13 @@ body {
 .parent-form .form__block form input[type=text] {
   width: 300px;
 }
+@media screen and (max-width: 900px) {
+  .parent-form .form__block form input[type=text] {
+    width: 100%;
+  }
+}
 .parent-form .form__block form textarea {
-  width: 650px;
+  width: auto;
 }
 .parent-form .form__block button {
   width: 200px;
@@ -234,6 +379,12 @@ body {
   width: 300px;
   height: 300px;
 }
+@media screen and (max-width: 900px) {
+  .parent-galerie .galerie__item {
+    width: 100%;
+    margin: 5px;
+  }
+}
 
 .parent-urgence {
   background-image: url("/img/826909-hospital-wallpapers-1920x1080-hd.jpg");
@@ -243,10 +394,21 @@ body {
   max-width: 100%;
   padding: 100px;
 }
+@media screen and (max-width: 900px) {
+  .parent-urgence {
+    padding: 60px;
+  }
+}
 .parent-urgence .urgence {
   font-family: "Kumbh Sans", sans-serif;
   font-size: 3.5rem;
   color: white;
+  transition: 0.3s all;
+}
+@media screen and (max-width: 700px) {
+  .parent-urgence .urgence {
+    font-size: 2rem;
+  }
 }
 
 .parent-whatWeDo {
@@ -260,6 +422,11 @@ body {
   color: #05001a;
   text-align: center;
 }
+@media screen and (max-width: 700px) {
+  .parent-whatWeDo > h4 {
+    font-size: 3rem;
+  }
+}
 .parent-whatWeDo .whatWeDo {
   font-family: "Kumbh Sans", sans-serif;
   display: flex;
@@ -268,14 +435,20 @@ body {
   margin: auto;
   opacity: 0;
   transform: translateY(900px);
-  transition: 1s all;
+  transition: 0.5s all;
+}
+@media screen and (max-width: 700px) {
+  .parent-whatWeDo .whatWeDo {
+    flex-direction: column;
+    max-width: 100%;
+  }
 }
 .parent-whatWeDo .whatWeDo__item {
   padding: 40px;
-  width: 280px;
   text-align: center;
   color: #05001a;
   background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 .parent-whatWeDo .whatWeDo__item i {
   font-size: 3rem;
@@ -287,36 +460,11 @@ body {
 .parent-whatWeDo .whatWeDo__item p {
   text-align: center;
 }
-
-.parent-footer {
-  width: 100%;
-  background-color: #05001a;
-  margin-top: 50px;
-}
-.parent-footer .footer {
-  max-width: 1000px;
-  min-height: 300px;
-  display: flex;
-  margin: auto;
-  justify-content: space-between;
-}
-.parent-footer .footer__item {
-  text-align: center;
-  color: white;
-}
-
-.btn-goUp {
-  width: 50px;
-  height: 50px;
-  display: block;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 50px;
-  position: fixed;
-  right: 20px;
-  bottom: 100px;
-  background-color: #05001a;
-  color: white;
+@media screen and (max-width: 700px) {
+  .parent-whatWeDo .whatWeDo__item {
+    max-width: 100%;
+    justify-content: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
