--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -29,12 +29,43 @@ body {
   align-items: center;
   margin: auto;
 }
+.parent-header .header .fa-bars {
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  top: 12px;
+  right: 20px;
+  visibility: hidden;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header .fa-bars {
+    visibility: visible;
+  }
+}
 .parent-header .header img {
   height: 50px;
 }
 .parent-header .header__menu {
   display: flex;
   padding: 20px;
+  transition: 0.7s all;
+  box-sizing: border-box;
+  position: relative;
+}
+.parent-header .header__menu .fa-times {
+  position: absolute;
+  cursor: pointer;
+  top: 20px;
+  left: 30px;
+  font-size: 30px;
+  visibility: hidden;
+  display: none;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header__menu .fa-times {
+    visibility: visible;
+    display: inline-block;
+  }
 }
 .parent-header .header__menu a {
   display: block;
@@ -45,14 +76,37 @@ body {
   font-weight: 900;
   border-bottom: 4px solid transparent;
   transition: 0.9s all;
+  box-sizing: border-box;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header__menu a {
+    width: fit-content;
+    margin: 0;
+  }
 }
 .parent-header .header__menu a:hover {
   border-bottom: 4px solid #05001a;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header__menu {
+    position: absolute;
+    padding-left: 20px;
+    width: 100%;
+    flex-direction: column;
+    top: -1000px;
+    left: 0;
+    background-color: white;
+  }
 }
 .parent-header .header .header__contact {
   display: flex;
   font-family: "Kumbh Sans", sans-serif;
   text-transform: uppercase;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header .header__contact {
+    display: none;
+  }
 }
 .parent-header .header .header__contact h4 {
   color: #05001a;
@@ -64,6 +118,10 @@ body {
   text-decoration: none;
   display: block;
   padding: 20px 10px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .parent-footer {
@@ -78,6 +136,11 @@ body {
   margin: auto;
   justify-content: space-between;
 }
+@media screen and (max-width: 700px) {
+  .parent-footer .footer {
+    flex-direction: column;
+  }
+}
 .parent-footer .footer__item {
   text-align: center;
   color: white;
@@ -88,18 +151,14 @@ body {
   height: 50px;
   display: block;
   border-radius: 50%;
-  border: 2.5px solid white;
   text-align: center;
   line-height: 50px;
   position: fixed;
   right: 20px;
   bottom: 100px;
+  border: 2.5px solid white;
   background-color: #05001a;
   color: white;
-  transition: 0.3s all;
-}
-.btn-goUp:hover {
-  transform: scale(1.05);
 }
 
 .parent-form {
