--- a/css/style_services.css
+++ b/css/style_services.css
@@ -19,14 +19,28 @@ body {
   z-index: 100;
   width: 100%;
   margin: auto;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 .parent-header .header {
-  max-width: 1000px;
+  max-width: 100%;
   display: flex;
   background-color: white;
   justify-content: space-between;
   align-items: center;
   margin: auto;
+}
+.parent-header .header .fa-bars {
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  top: 12px;
+  right: 20px;
+  visibility: hidden;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header .fa-bars {
+    visibility: visible;
+  }
 }
 .parent-header .header img {
   height: 50px;
@@ -34,6 +48,24 @@ body {
 .parent-header .header__menu {
   display: flex;
   padding: 20px;
+  transition: 0.7s all;
+  box-sizing: border-box;
+  position: relative;
+}
+.parent-header .header__menu .fa-times {
+  position: absolute;
+  cursor: pointer;
+  top: 20px;
+  left: 30px;
+  font-size: 30px;
+  visibility: hidden;
+  display: none;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header__menu .fa-times {
+    visibility: visible;
+    display: inline-block;
+  }
 }
 .parent-header .header__menu a {
   display: block;
@@ -44,14 +76,37 @@ body {
   font-weight: 900;
   border-bottom: 4px solid transparent;
   transition: 0.9s all;
+  box-sizing: border-box;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header__menu a {
+    width: fit-content;
+    margin: 0;
+  }
 }
 .parent-header .header__menu a:hover {
   border-bottom: 4px solid #05001a;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header__menu {
+    position: absolute;
+    padding-left: 20px;
+    width: 100%;
+    flex-direction: column;
+    top: -1000px;
+    left: 0;
+    background-color: white;
+  }
 }
 .parent-header .header .header__contact {
   display: flex;
   font-family: "Kumbh Sans", sans-serif;
   text-transform: uppercase;
+}
+@media screen and (max-width: 900px) {
+  .parent-header .header .header__contact {
+    display: none;
+  }
 }
 .parent-header .header .header__contact h4 {
   color: #05001a;
@@ -65,6 +120,10 @@ body {
   padding: 20px 10px;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .parent-footer {
   width: 100%;
   background-color: #05001a;
@@ -76,6 +135,11 @@ body {
   display: flex;
   margin: auto;
   justify-content: space-between;
+}
+@media screen and (max-width: 700px) {
+  .parent-footer .footer {
+    flex-direction: column;
+  }
 }
 .parent-footer .footer__item {
   text-align: center;
@@ -92,6 +156,7 @@ body {
   position: fixed;
   right: 20px;
   bottom: 100px;
+  border: 2.5px solid white;
   background-color: #05001a;
   color: white;
 }
